# ATB

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEV-QUICKSTART.md  Makefile  README.md  SECURITY.md  docker-compose.minimal.yaml  docker-compose.yaml  generate_pdf.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  enterprise_action.md  feature_request.md
api/: README.md  openapi.yaml
atb-gateway-go/: Dockerfile.agentauth  Dockerfile.broker  README.md  go.mod  go.sum
atb-gateway-py/: README.md  requirements.txt
config/: connectors.example.json  federation.example.json  oidc-federation.example.json  platform-spiffe-mapping.example.json
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dev/: README.md  demo.sh  mint_poa.py  test_e2e.sh  upstream_echo.py
docs/: AI_Safe_Enterprise_Autonomy_Architecture.ocr.txt  Agent Identity in ATB.md  agent-identity-complete.md  api-reference.md  architecture.md  atb-vs-industrial-edge-comparison.md  audit.md  authentication.md  enterprise-actions.md  faq.md  getting-started.md  how-agent-gets-identity.md  how-agentauth-works.md  k8s-quickstart.md  observability.md  openapi-agentauth.yaml  openapi.yaml  operating-model.md  production-deployment.md  requirements-compliance.md  security-best-practices.md  security-hardening.md  security-policy.md  spiffe-integration.md  troubleshooting.md
examples/: README.md  client_go.go  client_python.py
load-tests/: README.md  stress.js
monitoring/: README.md
schemas/: audit-event.schema.json  oidc-federation.schema.json  poa-leg.schema.json  poa.schema.json
scripts/: atb.sh  create-signing-key-secret.sh  demo-scenarios.sh  gen_api_docs.sh  quickstart.sh  validate_all.sh
sdk/: README.md
sdk/go/: atb.go  (+8 more)
sdk/python/: README.md  pyproject.toml
sdk/python/atb/: Step-by-Step: How AgentAuth Validates.MD  __init__.py  client.py  exceptions.py  models.py  poa.py
sdk/python/examples/: audit_analysis.py  basic_action.py  batch_actions.py  high_risk_action.py  policy_check.py
sdk/python/tests/: test_client.py  test_poa.py
spire/: README.md
terraform/: README.md
tests/: conftest.py  pytest.ini  requirements.txt
(+189 files in other folders)
