[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atb-sdk"
version = "0.1.0"
description = "Python SDK for Agent Trust Broker (ATB) - Enterprise AI Agent Authorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ATB Team", email = "atb@example.com" }
]
keywords = [
    "ai",
    "agent",
    "authorization",
    "enterprise",
    "security",
    "spiffe",
    "trust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]
spiffe = [
    "py-spiffe>=0.0.3",
]

[project.urls]
Homepage = "https://github.com/mauriciomferz/ATB"
Documentation = "https://github.com/mauriciomferz/ATB/blob/main/sdk/python/README.md"
Repository = "https://github.com/mauriciomferz/ATB"
Issues = "https://github.com/mauriciomferz/ATB/issues"

[tool.hatch.build.targets.wheel]
packages = ["atb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.coverage.run]
source = ["atb"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
